--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/cjfaquino/to-do-list/issues"
   },
-  "homepage": "https://github.com/cjfaquino/to-do-list#readme"
+  "homepage": "https://github.com/cjfaquino/to-do-list#readme",
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
