--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,8 @@
         "sourceType": "module"
     },
     "rules": {
+        "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+        "no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["todo", "note"] }],
+        "import/no-cycle": "off"
     }
 }
